feat: dashboard api 추가 및 관련 부분 수정